# RNode_Firmware

./: .gitignore  Boards.h  README.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
MT3620/: CONFIGURATION.md  README.md  SECURITY.md  build.sh
MT3620/HLApp/: CMakeLists.txt  app_manifest.json  azure_iot.c  azure_iot.h  icm_handler.c  icm_handler.h  main.c  telemetry_validator.c  telemetry_validator.h
MT3620/RTApp/: CMakeLists.txt  app_manifest.json  icm_handler.c  icm_handler.h  main.c  rnode_core.c  rnode_core.h
MT3620/common/: config.h  telemetry.h
